[FIX] horizontal scroll

--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -35,8 +35,5 @@ body {
     position: absolute;
     inset: 0;
     z-index: -1;
-
-    block-size: 100vh;
-    inline-size: 100vw;
   }
 }
